<resources>
    <string name="app_name">TICS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_profile">Profile</string>


    <string name="menu_classes">Classes</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_studentdetails">Student Details</string>
    <string name="menu_students">Students</string>
    <string name="menu_medicalhistory">Medical History</string>
    <string name="menu_game">Game</string>
    <string name="menu_logout">Log out</string>

    <string name="error_while_logging_in">Error while logging in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>