<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_classes"
            android:icon="@drawable/classes"
            android:title="@string/menu_classes" />
        <item
            android:id="@+id/nav_students"
            android:icon="@drawable/students"
            android:title="@string/menu_students" />
        <item
            android:id="@+id/nav_medicalhistory"
            android:icon="@drawable/medicalhistory"
            android:title="@string/menu_medicalhistory" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/game"
            android:title="@string/menu_game" />
        <item
            android:id="@+id/nav_drawing"
            android:icon="@drawable/drawing"
            android:title="@string/menu_drawing" />
        <item android:title=" " />
        <item android:title=" " />
        <item android:title=" " />
        <item android:title=" " />
        <item android:title=" " />
        <item android:title=" " />
        <item android:title=" " />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
